# twat-llm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP.txt  DEVELOPMENT.md  Makefile  README.md  REFACTOR_FILELIST.txt  REPO_CONTENT.txt  TODO.md  \]'[;lkcv .txt  build.sh  cleanup.py  install.sh  llms.txt  publish.sh  pyproject.toml
.cursor/rules/: filetree.mdc
.github/workflows/: push.yml  release.yml
.omc/state/: agent-replay-dec377a6-c345-4726-b56e-851358707f8d.jsonl  idle-notif-cooldown.json
.omc/state/sessions/dec377a6-c345-4726-b56e-851358707f8d/: pre-tool-advisory-throttle.json  subagent-tracking-state.json
.specstory/history/: reviewing-the-reviewers-a-critical-analysis.md  writeup-review-and-rating-analysis.md
docs/: api.md  index.md  people-api-tldr.md  people.py  review-cursor.md  review-o3.md  serp.py
docs/research/: example_people_script.py  example_serp_script.py  people-api.md  review-copilot.md  review-trae.md  web-search-api.md
examples/: check_llm_plugins.py  example_people_script.py  example_serp_script.py  funchain_example.py  run_action_config_example.py
scripts/: build.sh  release.sh  setup.sh  test.sh
src/: funchain.py  llm_plugins.py  mallmo.py  twat_llm.py
src/twat_llm/: __init__.py  __main__.py  adapters.py  mallmo.py  twat_llm.py
tests/: test_adapters.py  test_benchmark.py  test_cli.py  test_integration.py  test_mallmo.py  test_package.py  test_twat_llm.py
